--- a/env-printer-argo-app.yaml
+++ b/env-printer-argo-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: 'https://github.com/prajwal-221/env-printer.git'
     targetRevision: HEAD
-    path: env-printer/overlays/staging/
+    path: .
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
